--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Solana Wallets implementation using nanostores",
   "author": "Yusuf-Uluc",
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
   "scripts": {
     "build": "tsc"
   },
