--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Solana Wallets implementation using nanostores",
   "author": "Yusuf-Uluc",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc"
   },
